Allow users to delete tasks

--- a/src/WebUI/ClientApplication/src/app/tasks/tasks.component.html
+++ b/src/WebUI/ClientApplication/src/app/tasks/tasks.component.html
@@ -32,7 +32,7 @@
                         <svg (click)="changeTaskStatus('DONE', task.id)" class="task-item__icon green-icon">
                             <use xlink:href="../assets/sprite.svg#icon-checkmark"></use>
                         </svg>
-                        <svg class="task-item__icon red-icon">
+                        <svg (click)="deleteTask(task.id)" class="task-item__icon red-icon">
                             <use xlink:href="../assets/sprite.svg#icon-cancel"></use>
                         </svg>
                     </div>
@@ -51,7 +51,7 @@
                         <svg (click)="changeTaskStatus('DONE', task.id)" class="task-item__icon green-icon">
                             <use xlink:href="../assets/sprite.svg#icon-checkmark"></use>
                         </svg>
-                        <svg class="task-item__icon red-icon">
+                        <svg (click)="deleteTask(task.id)" class="task-item__icon red-icon">
                             <use xlink:href="../assets/sprite.svg#icon-cancel"></use>
                         </svg>
                     </div>
@@ -67,7 +67,7 @@
                 <div *ngFor="let task of doneTasks" class="task-item">
                     <p class="task-item__title">{{ task.name }}</p>
                     <div class="task-item__icons">
-                        <svg class="task-item__icon red-icon">
+                        <svg (click)="deleteTask(task.id)" class="task-item__icon red-icon">
                             <use xlink:href="../assets/sprite.svg#icon-cancel"></use>
                         </svg>
                     </div>
