--- a/src/WebUI/ClientApplication/src/styles/_components.scss
+++ b/src/WebUI/ClientApplication/src/styles/_components.scss
@@ -468,9 +468,29 @@
         margin: 2rem 0;
         padding: 1.5rem 3rem;
     }
+}
 
+.create-new-project-btn {
+    cursor: pointer;
+    margin: 1rem 0;
+}
 
-    &__btn {
-        
+/////////////////
+///// CREATE-PROJECT
+.create-project-form {
+    &__heading {
+        font-size: 2rem;
+        margin-bottom: 2rem;
+    }
+
+    &__input {
+        padding: 1rem 2rem;
+        width: 100%;
+        font-size: 1.5rem;
+        margin-bottom: 2rem;
+    }
+
+    &__btn-close {
+        margin-left: 1.5rem;
     }
 }
